# SearchingAlgoServer

./: BaseServer.cpp  BaseServer.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  FileCacheManager.cpp  FileCacheManager.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  OA.cpp  OA.h  ParallelServer.cpp  ParallelServer.h  README.md  Searchable.h  Searcher.h  SearcherAbstarct.h  SerialServer.cpp  SerialServer.h  Solver.h  StringReverser.cpp  StringReverser.h  algorithmA_star.h  algorithmBFS.cpp  algorithmBFS.h  algorithmBestFirstSearch.h  algorithmDFS.cpp  algorithmDFS.h  details.txt  log.h  log_info.cpp  log_info.h  main.cpp  matrixSearchable.cpp  matrixSearchable.h  server_side.h
